Remove sensitive data from .env
Redacted sensitive information in .env file.

--- a/sliceforge-backend/.env
+++ b/sliceforge-backend/.env
@@ -6,7 +6,7 @@ NODE_ENV=development
 CLIENT_URL=http://localhost:3000
 
 # Postgres
-DATABASE_URL=postgresql://database_k9ou_user:MTJr9TnbZez12O8laEQGLhn8aLKdYc0B@dpg-d4rpr9ruibrs73cj5a60-a/database_k9ou
+DATABASE_URL=............................
 
 # JWT / Session
 JWT_SECRET=....................
